# NiChart

./: pyproject.toml  requirements.txt
NiChart/: __init__.py
NiChart/plugins/spareview/: spareview.py
testing/: test_dataio.py  test_spares.py
