[build-system]
requires = ["setuptools", "wheel", "poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
#build-backend = "setuptools.build_meta"
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "NiChart"
version = "0.1"
description = "BrainChart Utility and Analysis Package"
authors = [
    "Ahmed Abdulkadir <Ahmed.Abdulkadir@pennmedicine.upenn.edu>",
    "Ashish Singh <Ashish.Singh@pennmedicine.upenn.edu>",
    "Randa Melhem <Randa.Melhem@Pennmedicine.upenn.edu>"
]
keywords = ["neuro-imaging", "MRI", "big data"]

readme = "README.md"

include = ["NiChart/plugins/data/MUSE_ROI_Dictionary.csv",
           "NiChart/**/*.ui",
           "NiChart/**/*.yapsy-plugin",
           "*.png"]
packages = [
    {include = "NiChart"}
]


[tool.briefcase]
project_name = "NiChart"
name = "[NiChart]"
bundle = "com.example"
version = "0.1"
description = "BrainChart Utility and Analysis Package"
authors = [
    "Ahmed Abdulkadir <Ahmed.Abdulkadir@pennmedicine.upenn.edu>",
    "Ashish Singh <Ashish.Singh@pennmedicine.upenn.edu>",
    "Randa Melhem <Randa.Melhem@Pennmedicine.upenn.edu>"
]
keywords = ["neuro-imaging", "MRI", "big data"]
readme = "README.md"
icon = "NiChart/resources/icon"
installer_icon = "NiChart/resources/icon"
include = ["NiChart/plugins/data/MUSE_ROI_Dictionary.csv",
           "NiChart/**/*.ui",
           "NiChart/**/*.yapsy-plugin",
           "*.png"]
packages = [
    {include = "NiChart"}
]


[tool.briefcase.app.NiChart.macOS]
requires = []

[tool.briefcase.app.NiChart.linux]
requires = []
system_requires = []

[tool.briefcase.app.NiChart.windows]
requires = []


[tool.briefcase.app.NiChart]
formal_name = "NiChart"
description = "The coolest app ever"
icon = "NiChart/resources/icon" # Briecase will choose the right extension depending the os (png,ico,...)
sources = ['NiChart']
requires = ['certifi==2023.5.*',
'charset-normalizer==3.1.0',
'contourpy==1.0.7',
'cycler==0.11.0',
'dill==0.3.6',
'docopt==0.6.2',
'fonttools==4.39.4',
'idna==3.4',
'importlib-resources==5.12.0',
'install==1.3.5',
'joblib==1.2.0',
'kiwisolver==1.4.4',
'matplotlib==3.7.1',
'numpy==1.22.*',
'packaging==23.1',
'pandas==2.0.*',
'Pillow==9.*',
'pipreqs==0.4.13',
'pyparsing==3.0.9',
'PyQt5==5.15.2',
'PyQt5-sip==12.12.1',
'python-dateutil==2.8.2',
'pytz==2023.3',
'requests==2.30.0',
'scikit-learn==1.0.*',
'scipy==1.6.*',
'seaborn==0.11.*',
'six==1.16.0',
'spare-scores==17.0.1',
'threadpoolctl==3.1.0',
'tzdata==2023.3',
'urllib3==2.0.2',
'Yapsy==1.12.2',
'yarg==0.1.9',
'zipp==3.15.0']


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
briefcase = "^0.3.5"
cycler = "^0.10.0"
joblib = "^1.0.1"
MarkupSafe = "2.0.1"
matplotlib = "^3.4.2"
nibabel = "^3.2.1"
numpy = "^1.21"
neuroHarmonize = { git = "https://github.com/rpomponio/neuroHarmonize.git", branch = "refs/pull/26/head" }
pandas = "2.0.*"
Pillow = "^9.0.0"
pyparsing = "^2.4.7"
PyQt5 = "^5.15.4"
PyQt5_Qt5 = "^5.15.2"
PyQt5_sip = "^12.9.0"
dill = "^0.3.4"
future = "^0.18.2"
python_dateutil = "^2.8.1"
pytz = "^2021.1"
scikit_learn = "^1.0.2"
scipy = "^1.6.3"
seaborn = "^0.11.1"
six = "^1.16.0"
statsmodels = "^0.13.0"
Yapsy = "^1.12.2"
Jinja2 = "^2.11.3"
pytest = "7.0.1"
pytest-qt = "4.0.2"

[tool.poetry.urls]
homepage = "https://cbica.github.io/NiChart"
repository = "https://github.com/CBICA/NiChart"
documentation = "https://cbica.github.io/NiChart"


[tool.poetry.scripts]
NiChart = "NiChart:main"
